website: fix horizontal alignment of module descriptions in homepage box

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -173,7 +173,8 @@
     width: 400px;
     vertical-align:top;
 
-    margin-left: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 40px;
 
     overflow: hidden;
